infra/gcp/kubernetes/g8-1/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: natureprotector
  labels:
    app.kubernetes.io/part-of: natureprotector
    phase: g8-1
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
